# sublyve

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: audio.rs  bundle.rs  composition.rs  config.rs  deck.rs  decode_worker.rs  layer.rs  library.rs  main.rs  project.rs  thumb_cache.rs  thumbs.rs  ui.rs  undo.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: composition.rs  engine.rs  gpu.rs  lib.rs  pipeline.rs  quad.rs  surface.rs  thumbnail.rs  video_texture.rs
crates/compositor/src/shaders/: quad.wgsl
crates/core/: Cargo.toml
crates/core/src/: blend.rs  color.rs  error.rs  frame.rs  lib.rs  rect.rs
crates/playback/: Cargo.toml
crates/playback/src/: cameras.rs  clip.rs  decoder.rs  hotplug.rs  lib.rs  transport.rs
