[package]
name = "avengine-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "avengine"
path = "src/main.rs"

[dependencies]
avengine-core = { path = "../core" }
avengine-playback = { path = "../playback" }
avengine-compositor = { path = "../compositor" }
wgpu = "23"
winit = "0.30"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
