[package]
name = "avengine-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "avengine"
path = "src/main.rs"

[dependencies]
avengine-core.workspace = true
avengine-playback.workspace = true
avengine-compositor.workspace = true

wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
pollster.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
