[package]
name = "avengine-playback"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
avengine-core.workspace = true
ffmpeg-next.workspace = true
tracing.workspace = true
ringbuf.workspace = true
bytemuck.workspace = true

# macOS-only: AVCaptureDevice connect/disconnect notifications via
# NSNotificationCenter. Used by `cameras::hotplug`. objc2-foundation
# + block2 already live in the transitive tree (winit pulls them) so
# this adds no fresh leaf deps.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation.workspace = true
block2.workspace = true
